添加fallback与FallBackFactory功能 但当前测试发现FallBackFactory返回异常信息不全，好像没什么用。 这块可能需要再看一下，到底是怎么回事。

--- a/eclipse-workspace/SpringCloud/02-Customer/src/main/resources/application.yml
+++ b/eclipse-workspace/SpringCloud/02-Customer/src/main/resources/application.yml
@@ -8,6 +8,7 @@ SEARCH:
   ribbon:
     NFLoadBalancerRuleClassName: com.netflix.loadbalancer.WeightedResponseTimeRule
 
+feign:  hystrix:    enabled: true
       
 spring:  application:    name: CUSTOMER
 
