1.添加sidecar(多开发语言支持)组件支持。 2.添加other-service项目只为测试sidecar

--- a/eclipse-workspace/SpringCloud/02-Customer/src/main/resources/application.yml
+++ b/eclipse-workspace/SpringCloud/02-Customer/src/main/resources/application.yml
@@ -4,11 +4,21 @@ eureka:
     serviceUrl:
       defaultZone: http://root:root@localhost:8761/eureka/,http://root:root@localhost:8762/eureka/
 
+#management:
+#  endpoints:
+#    web:
+#      exposure:
+#        include: ["health","info","hystrix.stream"]
+
+
 SEARCH: 
   ribbon:
     NFLoadBalancerRuleClassName: com.netflix.loadbalancer.WeightedResponseTimeRule
 
 feign:  hystrix:    enabled: true
       
-spring:  application:    name: CUSTOMER
+version: v1
+
+spring:  application:    name: CUSTOMER-${version}
+   
 
