--- a/eclipse-workspace/SpringCloud/02-Customer/pom.xml
+++ b/eclipse-workspace/SpringCloud/02-Customer/pom.xml
@@ -11,12 +11,16 @@
   <artifactId>02-Customer</artifactId>
   
   <dependencies>
-  
-  		<dependency>
-		    <groupId>org.projectlombok</groupId>
-		    <artifactId>lombok</artifactId>
-		    <scope>provided</scope>
-		</dependency>
+	    
+	    <dependency>	
+  				<groupId>org.springframework.cloud</groupId>
+  				<artifactId>spring-cloud-starter-netflix-hystrix-dashboard</artifactId>
+  		</dependency>
+  		
+  		<dependency>	
+  				<groupId>org.springframework.cloud</groupId>
+  				<artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+  		</dependency>
   
   		<dependency>	
   				<groupId>org.springframework.cloud</groupId>
@@ -32,6 +36,12 @@
   				<groupId>org.springframework.boot</groupId>
   				<artifactId>spring-boot-starter-web</artifactId>
   		</dependency>
+  		
+  		<dependency>
+		    <groupId>org.projectlombok</groupId>
+		    <artifactId>lombok</artifactId>
+		    <scope>provided</scope>
+		</dependency>
   
   </dependencies>
 </project>
