--- a/eclipse-workspace/SpringCloud/03-Search/pom.xml
+++ b/eclipse-workspace/SpringCloud/03-Search/pom.xml
@@ -8,15 +8,13 @@
   <artifactId>03-Search</artifactId>
   
   <dependencies>
-  		
-  		
-  		<dependency>
-		    <groupId>org.projectlombok</groupId>
-		    <artifactId>lombok</artifactId>
-		    <scope>provided</scope>
-		</dependency>
-  		
-  		<dependency>	
+  
+		<dependency>
+               <groupId>org.springframework.boot</groupId>
+               <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        
+        <dependency>	
   				<groupId>org.springframework.cloud</groupId>
   				<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
   		</dependency>
@@ -25,6 +23,12 @@
   				<groupId>org.springframework.boot</groupId>
   				<artifactId>spring-boot-starter-web</artifactId>
   		</dependency>
+  		
+  		<dependency>
+		    <groupId>org.projectlombok</groupId>
+		    <artifactId>lombok</artifactId>
+		    <scope>provided</scope>
+		</dependency>
   
   </dependencies>
   
